--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,8 @@
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
+				<category android:name="android.intent.category.BROWSABLE" /> <!-- Possibly needed? -->
+				<data android:scheme="trelloid" />
 			</intent-filter>
 		</activity>
 	</application>
