--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,9 +9,14 @@
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
-				<category android:name="android.intent.category.BROWSABLE" /> <!-- Possibly needed? -->
-				<data android:scheme="trelloid" />
+				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
+			<intent-filer>
+				<action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+				<data android:scheme="trelloid" />
+			</intent-filer>
 		</activity>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
