--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,12 +11,12 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
-			<intent-filer>
+			<intent-filter>
 				<action android:name="android.intent.action.VIEW" />
 				<category android:name="android.intent.category.DEFAULT" />
 				<category android:name="android.intent.category.BROWSABLE" />
 				<data android:scheme="trelloid" />
-			</intent-filer>
+			</intent-filter>
 		</activity>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
